fix spacing bug for labels

--- a/src/sass/module/_form.sass
+++ b/src/sass/module/_form.sass
@@ -19,8 +19,8 @@
   &-inline
     position: relative
 
-    &:not(:first-child)
-      margin-top: $space-threeQuarter
+  & + &-inline
+    margin-top: $space-threeQuarter
 
 
 // Labels
